k8s/tfc/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfc-backend
  namespace: boilerplate
  labels:
    app: tfc-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfc-backend
  template:
    metadata:
      labels:
        app: tfc-backend
    spec:
      containers:
        - name: tfc-backend
          image: PLACEHOLDER
          ports:
            - containerPort: 8001
              name: http
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            periodSeconds: 30
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              memory: 512Mi
