k8s/tfc/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tfc-frontend
  namespace: boilerplate
  labels:
    app: tfc-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tfc-frontend
  template:
    metadata:
      labels:
        app: tfc-frontend
    spec:
      containers:
        - name: tfc-frontend
          image: PLACEHOLDER
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 128Mi
