k8s/tfc/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfc-backend
  namespace: boilerplate
  labels:
    app: tfc-backend
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tfc-backend
