k8s/tfc/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tfc-frontend
  namespace: boilerplate
  labels:
    app: tfc-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: tfc-frontend
